<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleViewActivity"
    android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
        android:paddingTop="2dip" 
        android:paddingBottom="2dip" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"> 
        
        <TextView android:id="@+android:id/t_begin" 
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/schedule_blue"
            android:text="@string/schedule_depature" /> 
    
        <TextView android:id="@+android:id/t_end" 
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/schedule_green"
            android:text="@string/schedule_destination" /> 
                
        <TextView android:id="@+android:id/duration" 
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/schedule_red"
            android:text="@string/schedule_duration" /> 
    </LinearLayout> 
    
    <ListView android:id="@android:id/list"
               android:layout_width="match_parent"
               android:layout_height="match_parent" />

</LinearLayout>